# music-station

./: .gitignore  API_DOCUMENTATION.md  AUTO_FETCH_LYRICS_GUIDE.md  CLIENT_DEVELOPMENT_GUIDE.md  CLIENT_USAGE.md  CLI_CLIENT_USAGE.md  Cargo.toml  DEBUG_LOGGING.md  DOCUMENTATION_INDEX.md  FIREFOX_SCROLL_FIX.md  LYRICS_API.md  LYRICS_GUIDE.md  LYRICS_IMPLEMENTATION.md  LYRICS_MIGRATION.md  METADATA_IMPROVEMENTS.md  MP3_SUPPORT.md  PERFORMANCE_OPTIMIZATION.md  PLAY_QUEUE_GUIDE.md  QUICK_START_METADATA.md  QUICK_START_PERFORMANCE.md  README.md  TODO-tests.md  TODO-webclient.md  TODO.md  WEB_CLIENT_GUIDE.md  WEB_LYRICS_GUIDE.md  WORD_LEVEL_FORMAT_SUMMARY.md  WORD_LEVEL_LYRICS.md  WORD_LEVEL_RENDERING.md  WORD_LEVEL_RENDERING_SUMMARY.md  test_lyrics.sh  test_word_level_format.sh  test_word_level_lyrics.html
.github/: copilot-instructions.md
examples/: lyrics_fetcher.rs
music-search-rs/: .gitignore  BINARY_IMPLEMENTATION.md  BINARY_USAGE.md  CHANGELOG.md  Cargo.toml  EXAMPLES.md  FIXES.md  PROJECT_SUMMARY.md  README.md  test-binary.sh  test-examples.sh
music-search-rs/examples/: netease_search.rs  qqmusic_search.rs  test_custom_des.rs  test_des.rs
music-search-rs/src/: error.rs  lib.rs  models.rs
music-search-rs/src/netease/: api.rs  mod.rs  models.rs
music-search-rs/src/qqmusic/: api.rs  decrypt.rs  mod.rs  models.rs
src/: audio.rs  favorites.rs  lib.rs  library.rs  lyrics.rs  main.rs  playlist.rs  server.rs  stats.rs
src/lyrics/: fetcher.rs  music_search_provider.rs  providers.rs
static/: app.js  index.html  styles.css
static-legacy/: app.js  styles.css  test_word_level_lyrics.html
tests/: api_tests.rs  lyric_format_tests.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.vue
web/src/api/: albums.ts  artists.ts  client.ts  cover.ts  favorites.ts  lyrics.ts  playlists.ts  stats.ts  tracks.ts
web/src/composables/: useLrcParser.ts
web/src/router/: index.ts
web/src/stores/: albums.ts  artists.ts  favorites.ts  library.ts  lyrics.ts  player.ts  playlists.ts  queue.ts  ui.ts
web/src/types/: index.ts
web/src/utils/: format.ts
(+27 files in other folders)
